# rust-wordle

./: Dockerfile  README.md  parse-words.py
wordle/: Cargo.toml
wordle/src/: main.rs
