[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
authors = ["Werneri Aarnio <werneri.aarnio@gmail.com>", "Niko Kalliomaa <kallionikomaa@gmail.com>"]
license = "MIT"
description = "Terminal based worlde game"
readme = "README.md"
repository = "https://github.com/werneriaa/rust-wordle"


[dependencies]
colored = "2.0"
rand = "0.8.4"
chrono = "0.4.24"
